--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       platforms:
         - linux/amd64
         - linux/arm64
+    env_file: .env
+    command: --host ${HOST}
     restart: always
     ports:
       - 22:22
